# voice_orchestrator

./: .env.example  README.md  config.py  main.py  pyproject.toml
data/logs/: conversation.jsonl
src/: audio.py  llm_openai.py  logger.py  orchestrator.py  stt_deepgram.py  tts_elevenlabs.py
